[package]
name = "paths"
version = "0.1.0"
edition = "2021"
description = "Simple way to semantically require relative or absolute paths"
authors = ["Natalie Jameson <natalie@natalie.wtf>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
diesel = { version = "2.0.0-rc.1", features = ["sqlite", "r2d2", "chrono"], optional = true }
gazebo = { version = "0.8.0" }
itertools = { version = "0.10.3" }
ref-cast = { version = "1.0.8" }
serde = { version = "1.0.143", features = ["derive"], optional = true }
thiserror = { version = "1.0.32" }

[dev-dependencies]
serde_json = { version = "1.0.83" }
tempfile = { version = "3.3.0" }

[features]
default = ["serde", "display"]
display = []
serde = ["dep:serde"]
diesel = ["serde", "dep:diesel"]
